syntax="proto3";

package pcbook.pbfiles;
option go_package=".;pb";

import "laptop_msg.proto";
import "filter_msg.proto";
import "google/api/annotations.proto";

message CreateLaptopRequest {Laptop laptop = 1;}

message CreateLaptopResponse {string id = 1;}

message SearchLaptopRequest {Filter filter = 1;}

message SearchLaptopResponse {Laptop laptop = 1;}

message UploadImageRequest {
  oneof data { // 这里使用oneof字段，因为第一个请求仅包含元数据
    ImageInfo info = 1;
    bytes chunk_data = 2;
  }
}

message ImageInfo {
  string laptop_id = 1;
  string image_type = 2; // .jpg .png
}

message UploadImageResponse {
  string id = 1; // image id generated by the server
  uint32 size = 2;
}

message RateLaptopRequest {
  string laptop_id = 1;
  double score = 2;
}

message RateLaptopResponse {
  string laptop_id = 1;
  uint32 rated_count = 2;
  double average_score = 3;
}

service LaptopService  {
  rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {
    option (google.api.http) = {
      post: "/v1/laptop/create"
      body: "*"
    };
  };
  rpc SearchLaptop(SearchLaptopRequest) returns (stream SearchLaptopResponse) {
    option (google.api.http) = {
      get: "/v1/laptop/search"
    };
  };
  rpc UploadImage(stream UploadImageRequest) returns (UploadImageResponse) {
    option (google.api.http) = {
      post: "/v1/laptop/upload_image"
      body: "*"
    };
  };
  rpc RateLaptop(stream RateLaptopRequest) returns (stream RateLaptopResponse) {
    option (google.api.http) = {
      post: "/v1/laptop/rate"
      body: "*"
    };
  };
}
